# my_atcoder_answers

./: .gitignore  README.md  docs.md
abc155/: b.cpp  c.cpp
abc156/: a.cpp  b.cpp  c.cpp
docs/: algorithm_reference.md  tasks_by_algorithm.md
docs/enviroment/: c++.md  python3.md  rust.md  scala.md
rust/: Cargo.toml
rust/abc155/src/: a.rs
rust/abc156/: Cargo.toml
rust/answers/: Cargo.toml
rust/answers/src/abc155/: b.rs  c.rs
rust/answers/src/abc156/: a.rs  b.rs  c.rs
rust/answers/src/abc166/: a.rs
rust/answers/src/abc171/: a.rs
rust/answers/src/abc175/: a.rs
rust/answers/src/abc186/: b.rs
rust/answers/src/abc222/: a.rs  b.rs  c.rs  d.rs
rust/answers/src/abc223/: a.rs  b.rs  c.rs
rust/answers/src/abc224/: a.rs  b.rs  c.rs
rust/answers/src/abc225/: a.rs  b.rs  c.rs
rust/answers/src/abc226/: a.rs  b.rs
rust/answers/src/abc227/: a.rs  b.rs
rust/sample/: Cargo.toml
rust/sample/src/: convert_sample.rs  min_max_sample.rs  string_sample.rs
rust/sample/src/template/: a.rs  b.rs
rust/template/: Cargo.toml
rust/template/src/: a.rs
scala/: .scalafmt.conf  build.sbt
scala/sample/src/main/scala/sample/: BinarySearchSample.scala  CombinationSample.scala  FormatSample.scala  MinMaxSample.scala  MyTestLib.scala  (+4 more)
src/abc144/: a.cpp  b.cpp  c.cpp  d.cpp
src/abc146/: a.py  a2.py  b.cpp  c.cpp
src/abc155/: a.py
src/abc156/: a.scala  b.cpp  c.cpp
typescript/: README.md  package.json  pnpm-lock.yaml
typescript/src/answers/abs/: abc086_a.ts  practice_1.ts
typescript/src/samples/: list.ts
typescript/src/templates/: a.ts
(+16 files in other folders)
