[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.3.6"

# cargo run --bin a
[[bin]]
name = "a"
path = "src/template/a.rs"

[[bin]]
name = "b"
path = "src/template/b.rs"

[[bin]]
name = "min_max_sample"
path = "src/min_max_sample.rs"

[[bin]]
name = "string_sample"
path = "src/string_sample.rs"
